# indian-address-parser

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO_GUIDE.md  DEMO_PRESENTATION.py  LICENSE  PROJECT_JOURNEY.md  README.md  SECURITY.md  deploy_hf_spaces.py  pyproject.toml
.github/workflows/: ci.yml
api/: Dockerfile  cloudbuild.yaml  main.py
data/processed/: label_info.json  synthetic_train.jsonl  synthetic_val.jsonl  test.bio  test.jsonl  test_balanced.jsonl  train.bio  train.jsonl  train_augmented.jsonl  train_combined.jsonl  train_final.jsonl  val.bio  val.jsonl  val_expanded.jsonl
demo/: README.md  app.py  requirements.txt
models/: .gitkeep
models/address_ner/: config.json  training_info.json
models/address_ner_indicbert/: training_info.json
models/address_ner_v3/: config.json  test_results.json  training_info.json
models/address_ner_v4/: test_results.json  tokenizer_config.json  training_info.json
notebooks/: .gitkeep
src/address_parser/: __init__.py  cli.py  pipeline.py  schemas.py
src/address_parser/models/: __init__.py  bert_crf.py  config.py
src/address_parser/postprocessing/: __init__.py  gazetteer.py  rules.py
src/address_parser/preprocessing/: __init__.py  hindi.py  normalizer.py
tests/: __init__.py  test_pipeline.py  test_postprocessing.py  test_preprocessing.py
training/: __init__.py  augment.py  convert_data.py  generate_balanced_data.py  generate_synthetic.py  train.py
