[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "indian-address-parser"
version = "2.1.0"
description = "Production-grade Indian address parsing using mBERT-CRF"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kushagra", email = "kushagra@gmail.com"}
]
keywords = ["nlp", "ner", "address-parsing", "indian-addresses", "bert", "crf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = ">=3.14"
dependencies = [
    "torch>=2.10.0",
    "transformers>=5.0.0",
    "tokenizers>=0.22.2",
    "datasets>=4.5.0",
    "safetensors>=0.7.0",
    "huggingface-hub>=1.3.7",
    "seqeval>=1.2.2",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.1",
    "pydantic>=2.12.5",
    "indic-transliteration>=2.3.76",
    "regex>=2026.1.15",
    "rapidfuzz>=3.14.3",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gunicorn>=23.0.0",
    "python-multipart>=0.0.18",
    "orjson>=3.10.0",
]
demo = [
    "gradio>=6.5.1",
    "gradio-client>=2.0.3",
    "pillow>=12.1.0",
]
training = [
    "accelerate>=1.12.0",
    "wandb>=0.24.0",
    "optuna>=4.7.0",
]
onnx = [
    "onnx>=1.20.1; python_version < '3.14'",
    "onnxruntime>=1.23.2; python_version < '3.14'",
]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "black>=26.1.0",
    "ruff>=0.14.13",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
]
all = [
    "indian-address-parser[api,demo,training,dev]",
]
all-with-onnx = [
    "indian-address-parser[api,demo,training,onnx,dev]",
]

[project.scripts]
address-parser = "address_parser.cli:main"

[project.urls]
Homepage = "https://github.com/kushagra/indian-address-parser"
Documentation = "https://github.com/kushagra/indian-address-parser#readme"
Repository = "https://github.com/kushagra/indian-address-parser"
Issues = "https://github.com/kushagra/indian-address-parser/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
address_parser = ["data/*.json", "data/*.txt"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "address_parser.models.bert_crf"
disable_error_code = ["assignment", "arg-type", "union-attr", "index", "return-value"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=address_parser --cov-report=term-missing"
